force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <label>Case</label>
</CustomObject>