force-app/main/default/objects/Case/fields/GWR_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>GWR_Go_Live_Date__c</fullName>
    <type>Date</type>
    <label>GWR Go Live Date</label>
</CustomField>