force-app/main/default/objects/Case/fields/GWR_Leveller__c.field-meta.xml
<CustomField>
    <fullName>GWR_Leveller__c</fullName>
    <type>Number</type>
    <label>GWR Leveller</label>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>