force-app/main/default/objects/Case/fields/GWR_Stats1__c.field-meta.xml
<CustomField>
    <fullName>GWR_Stats1__c</fullName>
    <label>GWR Stats1</label>
    <type>Text</type>
    <length>12</length>
</CustomField>