force-app/main/default/objects/Case/fields/GWR_Urgency__c.field-meta.xml
<CustomField>
    <fullName>GWR_Urgency__c</fullName>
    <type>Number</type>
    <label>GWR Urgency</label>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>