force-app/main/default/objects/Case/fields/SLAViolation__c.field-meta.xml
<CustomField>
    <fullName>SLAViolation__c</fullName>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <isActive>true</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>true</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <label>SLA Violation</label>
</CustomField>